XD-3082 UI: Add Analytics Tab
Jira: https://jira.spring.io/browse/XD-3082

--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -49,6 +49,9 @@
             <li ng-class="{ active: $state.includes('home.jobs') }">
               <a ui-sref="home.jobs.tabs.definitions">Jobs</a>
             </li>
+            <li ng-class="{ active: $state.includes('home.analytics') }">
+              <a ui-sref="home.analytics.tabs.dashboard">Analytics</a>
+            </li>
             <li ng-class="{ active: $state.includes('home.about') }">
               <a ui-sref="home.about">About</a>
             </li>
